Fixed an alignment (dif heights) issue

--- a/src/sass/content.sass
+++ b/src/sass/content.sass
@@ -1,6 +1,7 @@
 #content-wrapper
+    height: calc(100vh - 67px) //67px is the height of nav
     display: flex
-    padding-top: 30px
+    padding: 50px 0 30px 0
     gap: 0.5rem
     justify-content: center
     align-content: center
@@ -15,4 +16,5 @@
 #display-toggle-btn-wrapper
     position: relative
     width: 90%
+    height: 0
    
