--- a/src/sass/input-area.sass
+++ b/src/sass/input-area.sass
@@ -12,7 +12,7 @@ $clear-btn-width: 30px
     border-radius: 5px
     border: solid 1px #979797
     width: 100%
-    height: 860px
+    height: 100%
     background: white
     display: inline-block
     resize: none
@@ -20,8 +20,9 @@ $clear-btn-width: 30px
 
 #input-area:focus
     outline: none
-    
+
 #input-area-wrapper
     position: relative
     width: 45%
+    height: 100%
 
