--- a/src/sass/output-area.sass
+++ b/src/sass/output-area.sass
@@ -1,8 +1,7 @@
 #output-area
     width: 45%
-    height: 860px
+    height: 100%
     background: white
-    display: inline-block
     border: 1px solid gray
     padding: 2rem 1rem 2rem 1rem
     overflow: scroll
